--- a/css/style.css
+++ b/css/style.css
@@ -403,6 +403,28 @@ footer{
 }
  
 
+
+.pagination{
+
+  text-align: center;
+  font-size: 35px;
+  background-color: #183b56;
+  border-radius: 15px;
+  color: white;
+  margin-top: 18px;
+}
+
+.pagination a{
+  color: #f1f1f1;
+}
+
+.pagination a:hover{
+  color: #2294ed;
+}
+
+
+
+
 /* -------------------------------------------------------------------------------------------------------------------------- */
 
 
